--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crystal Count Down</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/download.png"/>
+    <link rel="shortcut icon" type="image/png" href="assets/images/download.png">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Chela+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
